--- a/index.html
+++ b/index.html
@@ -3,13 +3,13 @@
     <head>
         <title>PathFinding Visualizer</title>
         <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous">
-        <link rel="stylesheet" href="styles/styles.css">
         <link href="https://fonts.googleapis.com/css2?family=Dancing+Script:wght@400;700&display=swap" rel="stylesheet">
         <script src="https://kit.fontawesome.com/690cab2d5c.js" crossorigin="anonymous"></script>
+        <link rel="stylesheet" href="styles/styles.css">
     </head>
     <body>
         <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-            <span class="navbar-brand mb-0 h1" style="font-family: 'Dancing Script', cursive;font-size: 30px;">PathFinding Visualizer</span>
+            <span class="navbar-brand mb-0 h1" style="font-family: 'Dancing Script', cursive;font-size: 30px;color: white;">PathFinding Visualizer</span>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
               <span class="navbar-toggler-icon"></span>
             </button>
@@ -32,6 +32,27 @@
             </div>
             <table id="table" class="board" style="background-color: #30336B" ondragstart="return false;" ondrop="return false;"></table>
         </div>
+
+
+        <script>
+            function sleep(ms) {
+                return new Promise(resolve => setTimeout(resolve, parseFloat(ms)));
+            }
+            type = -1;
+        </script>
         <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
+        <script type="module">
+            import {makeCell,start_graph,select} from './js/graph.js';
+
+            window.onload = makeCell();
+            window.addEventListener('load', ()=>{
+                for(let i =0; i<=4; i++)
+                {
+                    $('#btn-'+i).click(()=>{select(i)});
+                }
+                $('#reset').click(()=>{makeCell()});
+                $('#start').click(()=>{start_graph()});
+            });
+        </script>
     </body>
 </html>
